--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "handlebars": "^4.0.8",
     "jquery": "^3.2.1",
     "lowdb": "^0.16.2",
+    "openurl": "^1.1.1",
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21",
     "toastr": "^2.1.2",
