--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/VampireChicks/Goodsights#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "cryptojs": "^2.5.3",
+    "crypto-js": "^3.1.9-1",
     "data": "^0.6.1",
     "express": "^4.15.2",
     "freelancer": "^0.1.7",
