--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.2.1",
     "lowdb": "^0.16.2",
     "openurl": "^1.1.1",
+    "registry-auth-token": "^3.3.1",
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21",
     "toastr": "^2.1.2",
